[project]
name = "foreman"
version = "0.2.0"
description = "Build dispatcher for Project Tick"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "sentry-sdk>=2.58.0",
    "sqlalchemy>=2.0.49",
    "structlog>=24.4.0",
    "granian>=1.7.6",
    "gql[requests]>=4.0.0,<5",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.12",
    "httpx>=0.28.1",
    "pytest-xdist>=3.8.0",
    "granian[reload]>=1.7.6",
    "ty>=0.0.34",
]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
