[project]
name = "project-tick-merge-action"
version = "1.0.0"
description = "Project Tick merge action"
requires-python = ">=3.12"
dependencies = [
    "PyGithub>=2.6.1,<3.0.0",
]

[project.urls]
Repository = "https://github.com/project-tick/project-tick"

[dependency-groups]
dev = [
    "pre-commit>=3.8.0,<4.0.0",
    "mypy>=1.11.2,<2.0.0",
    "ruff>=0.6.7,<1.0.0",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]


[dependency-groups]
dev = [
    "pre-commit<4.0.0,>=3.8.0",
    "mypy<2.0.0,>=1.11.2",
    "ruff<1.0.0,>=0.6.7",
    "PyGObject-stubs<3.0.0,>=2.11.0",
    "types-pyyaml<7.0.0.0,>=6.0.12.2",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
include = ["*.py"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "DTZ",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "PIE",
  "PL",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T201",
  "UP",
  "W",
]

ignore = [
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "S105",
  "S320",
  "S607",
  "S603",
]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
