[project]
name = "project-tick-merge-action"
version = "1.0.0"
description = "Project Tick merge action"
requires-python = ">=3.12"
dependencies = [
    "PyGithub>=2.6.1,<3.0.0",
]

[project.urls]
Repository = "https://github.com/project-tick/project-tick"

[dependency-groups]
dev = [
    "pre-commit>=3.8.0,<4.0.0",
    "mypy>=1.11.2,<2.0.0",
    "ruff>=0.6.7,<1.0.0",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
