[package]
name = "tickborg"
version = "0.1.0"
authors = ["Project Tick"]
build = "build.rs"
edition = "2024"
description = "Distributed CI bot for Project Tick monorepo"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
brace-expand = "0.1.0"
chrono = { version = "0.4.44", default-features = false, features = [
  "clock",
  "std",
] }
either = "1.15.0"
fs2 = "0.4.3"
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
hmac = "0.13.0"
http = "1.4.0"
http-body-util = "0.1.3"
#hubcaps = "0.6"
# for Conclusion::Skipped which is in master
hubcaps = { git = "https://github.com/ofborg/hubcaps.git", rev = "0d7466ef941a7a8e160c071e2846e56b90b6ea86" }
hyper = { version = "1.9.0", features = ["full", "server", "http1"] }
hyper-util = { version = "0.1.20", features = ["server", "tokio", "http1"] }
lapin = "4.7.0"
lru-cache = "0.1.2"
md5 = "0.8.0"
mime = "0.3.17"
nom = "8"
parking_lot = "0.12.5"
regex = "1.12.3"
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "net", "macros", "sync"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }
